--- a/index.html
+++ b/index.html
@@ -11,35 +11,37 @@ body {
   margin: 0;
   padding: 20px;
 }
-h1 {
-  text-align: center;
-  color: #333;
+h1 { text-align:center; color:#333; margin-bottom:20px; }
+#resumen {
+  display:flex;
+  justify-content: space-around;
   margin-bottom: 30px;
+  font-weight:bold;
 }
 .bloque {
-  display: grid;
+  display:grid;
   grid-template-columns: repeat(5, 1fr);
   gap: 20px;
   margin-bottom: 30px;
 }
 .sonda {
-  background-color: #fff;
-  border-radius: 12px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-  padding: 15px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  transition: transform 0.3s, border 0.3s;
-  cursor: pointer;
+  background-color:#fff;
+  border-radius:12px;
+  box-shadow:0 4px 12px rgba(0,0,0,0.15);
+  padding:15px;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  transition: transform 0.3s, border 0.3s, opacity 0.3s;
 }
 .sonda:hover { transform: translateY(-5px); }
-.sonda.seleccionada { border: 3px solid #007bff; }
-.sonda h2 { margin: 0; font-size: 1.1em; color: #555; margin-bottom: 10px; text-align:center; }
-canvas { width: 80px !important; height: 80px !important; margin-bottom:5px; }
-.valor { font-size: 0.9em; font-weight: bold; color: #333; text-align:center; margin-bottom:5px; }
+.sonda.seleccionada { border:3px solid #007bff; }
+.sonda.desactivada { opacity:0.4; }
+.sonda h2 { margin:0; font-size:1.1em; color:#555; margin-bottom:5px; text-align:center; }
+canvas { width:80px !important; height:80px !important; margin-bottom:5px; }
+.valor { font-size:0.9em; font-weight:bold; color:#333; text-align:center; margin-bottom:5px; }
 .alerta {
-  background-color: #ff4d4d;
+  background-color:#ff4d4d;
   color:#fff;
   font-weight:bold;
   padding:5px 10px;
@@ -49,6 +51,9 @@ canvas { width: 80px !important; height: 80px !important; margin-bottom:5px; }
   width:100%;
   margin-top:5px;
 }
+.toggle {
+  margin-bottom:5px;
+}
 @media(max-width:1200px){ .bloque{ grid-template-columns: repeat(4,1fr); } }
 @media(max-width:992px){ .bloque{ grid-template-columns: repeat(3,1fr); } }
 @media(max-width:768px){ .bloque{ grid-template-columns: repeat(2,1fr); } }
@@ -57,6 +62,12 @@ canvas { width: 80px !important; height: 80px !important; margin-bottom:5px; }
 </head>
 <body>
 <h1>Dashboard Termitas</h1>
+<div id="resumen">
+  <div>Sondas activas: <span id="numActivas">0</span></div>
+  <div>Alertas: <span id="numAlertas">0</span></div>
+  <div>Temp. promedio: <span id="promTemp">0</span>°C</div>
+  <div>Humedad promedio: <span id="promHum">0</span>%</div>
+</div>
 <div id="bloques-container"></div>
 
 <script defer>
@@ -67,13 +78,29 @@ document.addEventListener('DOMContentLoaded', function(){
   let sondaSeleccionada = null;
   const chartsTemp = [];
   const chartsHum = [];
+  const sondasActivas = Array(totalSondas).fill(true);
 
-  // Valores iniciales de prueba
   const valoresPrueba = Array.from({length: totalSondas}, (_, i) => ({
     Temperatura_C: Math.floor(Math.random()*10 + 20),
     Humedad_pct: Math.floor(Math.random()*30 + 40),
     Distancia_mm: Math.floor(Math.random()*20 + 25)
   }));
+
+  function actualizarResumen() {
+    let activas = 0, alertas = 0, sumTemp = 0, sumHum = 0;
+    for(let i=0;i<totalSondas;i++){
+      if(!sondasActivas[i]) continue;
+      activas++;
+      sumTemp += chartsTemp[i].data.datasets[0].data[0];
+      sumHum += chartsHum[i].data.datasets[0].data[0];
+      const dist = parseInt(document.getElementById(`dist-${i+1}`).innerText);
+      if(dist>30) alertas++;
+    }
+    document.getElementById('numActivas').innerText = activas;
+    document.getElementById('numAlertas').innerText = alertas;
+    document.getElementById('promTemp').innerText = activas?Math.round(sumTemp/activas):0;
+    document.getElementById('promHum').innerText = activas?Math.round(sumHum/activas):0;
+  }
 
   // Crear bloques
   for(let b=0; b<totalSondas/sondasPorBloque; b++){
@@ -85,8 +112,10 @@ document.addEventListener('DOMContentLoaded', function(){
       const sondaDiv = document.createElement('div');
       sondaDiv.classList.add('sonda');
       sondaDiv.id = `sonda-${sondaIndex}`;
+
       sondaDiv.innerHTML = `
         <h2>Sonda ${sondaIndex}</h2>
+        <label class="toggle">Activo <input type="checkbox" id="toggle-${sondaIndex}" checked></label>
         <canvas id="tempChart-${sondaIndex}"></canvas>
         <div class="valor" id="valorTemp-${sondaIndex}">${valoresPrueba[sondaIndex-1].Temperatura_C}°C</div>
         <canvas id="humChart-${sondaIndex}"></canvas>
@@ -96,12 +125,22 @@ document.addEventListener('DOMContentLoaded', function(){
           ¡Alerta de termitas!
         </div>
       `;
+
       // Selección
       sondaDiv.addEventListener('click', ()=>{
         if(sondaSeleccionada) sondaSeleccionada.classList.remove('seleccionada');
         sondaDiv.classList.add('seleccionada');
         sondaSeleccionada = sondaDiv;
       });
+
+      // Toggle activo/desactivo
+      const toggle = sondaDiv.querySelector(`#toggle-${sondaIndex}`);
+      toggle.addEventListener('change', ()=>{
+        sondasActivas[sondaIndex-1] = toggle.checked;
+        sondaDiv.classList.toggle('desactivada', !toggle.checked);
+        actualizarResumen();
+      });
+
       bloqueDiv.appendChild(sondaDiv);
 
       // Inicializar gráficos
@@ -114,6 +153,7 @@ document.addEventListener('DOMContentLoaded', function(){
       gradTemp.addColorStop(0,'#00ff00');
       gradTemp.addColorStop(0.5,'#ffff00');
       gradTemp.addColorStop(1,'#ff0000');
+
       const tempChart = new Chart(ctxTemp,{
         type:'doughnut',
         data:{ labels:['Temp','Resto'], datasets:[{data:[valoresPrueba[sondaIndex-1].Temperatura_C,50], backgroundColor:[gradTemp,'#eee'], borderWidth:0}] },
@@ -135,6 +175,8 @@ document.addEventListener('DOMContentLoaded', function(){
   // Actualizar datos cada 10s (simula ESP32)
   setInterval(()=>{
     for(let i=0;i<totalSondas;i++){
+      if(!sondasActivas[i]) continue;
+
       const temp = Math.floor(Math.random()*10 + 20);
       const hum = Math.floor(Math.random()*30 + 40);
       const dist = Math.floor(Math.random()*20 + 25);
@@ -152,8 +194,10 @@ document.addEventListener('DOMContentLoaded', function(){
       const alertaDiv = document.getElementById(`alerta-${i+1}`);
       alertaDiv.style.display = dist>30?'block':'none';
     }
+    actualizarResumen();
   },10000);
 
+  actualizarResumen();
 });
 </script>
 </body>
